# esp32-tailscale-subnet-router

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  partitions.csv  platformio.ini  sdkconfig.defaults
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  sensitive-patterns.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  sensitive-check.yml
components/acl/: CMakeLists.txt  acl.c  acl_nvs.c
components/acl/include/: acl.h
components/cli/: CMakeLists.txt  cli.c
components/cli/include/: cli.h
components/dhcpserver/: CMakeLists.txt  dhcpserver.c
components/dhcpserver/include/: dhcps_ext.h
components/dhcpserver/include/dhcpserver/: dhcpserver.h
components/dns_relay/: CMakeLists.txt  dns_relay.c
components/dns_relay/include/: dns_relay.h
components/net_diag/: CMakeLists.txt  net_diag.c
components/net_diag/include/: net_diag.h
components/pcap_capture/: pcap_capture.c  pcap_ringbuf.c  pcap_ringbuf.h
components/pcap_capture/include/: pcap_capture.h
components/remote_console/: CMakeLists.txt  remote_console.c
components/sdlog/: CMakeLists.txt  sdlog.c
components/sdlog/include/: sdlog.h
components/syslog/: CMakeLists.txt  syslog_client.c
components/web_password/: CMakeLists.txt  web_password.c
components/web_password/include/: web_password.h
docs/: CONFIGURATION.md  TESTING.md
main/: CMakeLists.txt  dhcp_reservations.c  dhcp_reservations.h  gen_index_html_gz.py  https_cert.c  https_cert.h  index.html  log_capture.c  log_capture.h  lwip_route_hook.c  lwip_route_hook.h  mac_deny.c  mac_deny.h  main.c  netif_hooks.c  netif_hooks.h  nvs_params.c  nvs_params.h  ota.c  ota.h  portmap.c  portmap.h  reset_history.c  reset_history.h  tailscale_config.h  tailscale_manager.c  tailscale_mtu.c  tailscale_mtu.h  telemetry.c  telemetry.h  web_password.c  web_ui.c  web_ui.h  wifi_networks.c  wifi_networks.h
syslog-docker/: Dockerfile  README.md  listener.py
tools/: force_rebuild_app_desc.py  regen_embed.py  run_tests.py  verify_routes.py
tools/test_lib/: __init__.py  common.py  dns_relay.py  firewall.py  network.py  pi.py  routing.py  spa.py  system_extras.py  tailscale.py
web/: design-notes.md  index.html
web/wireframes/: firewall.txt  network.txt  status-desktop.txt  status-mobile.txt  system.txt  tailscale-mobile-desktop.txt  tools.txt
